--- a/templates/base.html
+++ b/templates/base.html
@@ -1105,6 +1105,7 @@
 		<script src="{% static "assets/js/ace/ace.settings-skin.js" %}"></script>
 		<script src="{% static "assets/js/ace/ace.widget-on-reload.js" %}"></script>
 		<script src="{% static "assets/js/ace/ace.searchbox-autocomplete.js" %}"></script>
+        <script src="{% static "assets/js/main.js" %}"></script>
 
 
 		<!-- inline scripts related to this page -->
